# tap-plugin-magic

./: Cargo.toml  README.md
src/: lib.rs  magic.rs
